import "google/protobuf/any.proto";

option java_outer_classname = "SourceStockBO_PRO";
option java_package = "com.purefun.fstp.core.bo.pro";

message SourceStockBO {
    optional string uuid = 1;
    optional sint64 boid = 2;
    optional string destination = 3;
    optional string secu_id = 4;
    optional string isin = 5;
    optional string record_update_time = 6;
    optional string secu_chinese_name = 7;
    optional string secu_english_name = 8;
    optional string secu_base_id = 9;
    optional string exch_type = 10;
    optional string secu_type = 11;
    optional string secu_sub_type = 12;
    optional string currency = 13;
    optional double bond_par_value = 14;
    optional string not_list_stkqty = 15;
    optional string last_trade_date = 16;
    optional string list_date = 17;
    optional string product_set_id = 18;
    optional int32 buy_unit = 19;
    optional int32 sell_unit = 20;
    optional int32 trade_low_limit = 21;
    optional int32 trade_high_limit = 22;
    optional double pre_close_price = 23;
    optional double tick_price = 24;
    optional string price_limit_type = 25;
    optional double price_high_limit = 26;
    optional double price_low_limit = 27;
    optional double ex_right_ratio = 28;
    optional double dividend_price = 29;
    optional string financing_flag = 30;
    optional string margin_flag = 31;
    optional string secu_status = 32;
    optional string memo = 33;
}
